crates/neenee-code/src/tui/snapshots/neenee_code__tui__question_model__tests__question_modal_film_multiselect_checkboxes.snap
---
source: crates/neenee-code/src/tui/question_model.rs
assertion_line: 1163
expression: film
---
=== open (none selected) ===






           Question

           Which features?

             [ ] a
             [ ] b
             [ ] c
             [ ] Other






           ↑↓ navigate · Enter submit · Esc cancel

=== 1,2,3 → select all three ===






           Question

           Which features?

             [x] a
             [x] b
             [x] c
             [ ] Other






           ↑↓ navigate · Enter submit · Esc cancel

=== '2' again → deselect 'b' ===






           Question

           Which features?

             [x] a
             [ ] b
             [x] c
             [ ] Other






           ↑↓ navigate · Enter submit · Esc cancel
