crates/neenee-code/src/tui/snapshots/neenee_code__tui__question_model__tests__question_modal_film_two_question_header.snap
---
source: crates/neenee-code/src/tui/question_model.rs
assertion_line: 1176
expression: film
---
=== open: Question 1/2 ===




          Question 1/2

          first?

             x
             Other

          ↑↓ navigate · Enter submit · Esc cancel
